--- a/client/package.json
+++ b/client/package.json
@@ -42,18 +42,17 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "animate.css-react": "^1.1.0",
-    "cors": "^2.8.5",
+    "bootstrap": "^4.6.0",
     "dayjs": "^1.10.4",
-    "fbjs": "^3.0.0",
-    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.3",
     "react-switch": "^6.0.0",
     "react-transition-group": "^4.4.1",
-    "react-vis": "^1.11.7",
+    "reactstrap": "^8.9.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "rimraf": "^3.0.2",
