--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -51,8 +51,8 @@ services:
       - "8080:8080"
     volumes:
       - ./client/src:/usr/app/src
-    networks:
-      - app-network
+#    networks:
+#      - app-network
 
 networks:
   app-network:
